# rs-csv2parquet

./: Cargo.toml  README.md  doc-web.sh  rs-csv2parquet  run.sh
sample.d/: input.csv
src/: lib.rs  main.rs
